change following comments #1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "editor.formatOnSave": true,
-  "javascript.preferences.quoteStyle": "single",
+  "prettier.singleQuote": true,
   "editor.tabSize": 2
 }
