--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "editor.formatOnSave": true,
   "prettier.singleQuote": true,
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "cSpell.ignoreWords": [
+    "swal",
+    "sweetalert"
+  ]
 }
